--- a/smallScreen.css
+++ b/smallScreen.css
@@ -70,7 +70,6 @@
     vertical-align: middle;
     margin: 0.5em 0.5em;
     padding: 0 2em;
-    /* background-color: burlywood; */
   }
 
   #leftSideNav > button:nth-child(2) {
@@ -110,6 +109,11 @@
 
   #themeModal {
     width: 100%;
+  }
+
+  #themeModalButton i:nth-child(3) {
+    float: right;
+    clear: both;
   }
 
   /* trending */
