--- a/smallScreen.css
+++ b/smallScreen.css
@@ -26,7 +26,8 @@
   }
 
   .grid-container {
-    grid-template-columns: 0 1fr;
+    grid-template-columns: 1fr;
+    background-color: royalblue;
   }
 
   .video-gallery {
@@ -93,14 +94,16 @@
 
   /* rightnav */
   #rightNav {
+    position: fixed;
     top: 0em;
     right: 0em;
     width: 100%;
   }
-
+  
   .rightNav-modal {
     padding: 1em 0;
     width: 100%;
+    height: 100vh;
   }
 
   #theme > i:nth-child(3) {
@@ -109,6 +112,7 @@
 
   #themeModal {
     width: 100%;
+    height: 100vh;
   }
 
   #themeModalButton i:nth-child(3) {
@@ -276,6 +280,19 @@
   #videoContent {
     gap: 0.5em;
     margin-bottom: 1em;
+  }
+
+  /* settingsPage */
+  .settings-nav {
+    display: none;
+  }
+
+  .settings-account {
+    display: none;
+  }
+
+  .smallScreen-nav {
+    display: block;
   }
 }
 
