--- a/smallScreen.css
+++ b/smallScreen.css
@@ -26,8 +26,7 @@
   }
 
   .grid-container {
-    grid-template-columns: 1fr;
-    background-color: royalblue;
+    grid-template-columns: 0 1fr;
   }
 
   .video-gallery {
@@ -283,16 +282,12 @@
   }
 
   /* settingsPage */
-  .settings-nav {
-    display: none;
-  }
-
-  .settings-account {
-    display: none;
-  }
-
-  .smallScreen-nav {
+  #settingButton {
     display: block;
+  }
+
+  .setting {
+    display: none;
   }
 }
 
