import mobile settings css

--- a/assets/main.css
+++ b/assets/main.css
@@ -11,5 +11,6 @@
 @import "../modules/settingsPage/performancePage/performancePage.css";
 @import "../modules/settingsPage/settingsLeftNav/settingsNav.css";
 @import "../modules/videosPage/videoPage.css";
+@import "../modules/mobileSettingsPage/settingsPage.css";
 @import "../smallScreen.css";
 @import "./darkTheme.css";
