--- a/modules/settingsPage/settingsLeftNav/settingsNav.css
+++ b/modules/settingsPage/settingsLeftNav/settingsNav.css
@@ -30,3 +30,80 @@
   cursor: pointer;
   font-size: 1.1em;
 }
+
+.settings-mobile {
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background-color: #fff;
+}
+
+.settings-mobile > div:nth-child(1) {
+  padding: 1em;
+  border-bottom: 4px solid #b2b2b2a1;
+  height: auto;
+  box-shadow: 0px 0px 2px 0px #00000054;
+}
+
+#settingsContent {
+  position: relative;
+  overflow: auto;
+  height: 100vh;
+}
+
+#settingsContent > div {
+  border-bottom: 4px solid #b2b2b2a1;
+  height: auto;
+}
+
+.dropdown {
+  display: none;
+  padding: 0 1em;
+}
+
+.show {
+  display: block;
+}
+
+.settings-mobile small {
+  display: block;
+  color: #796079;
+  margin-top: 0.5em;
+  font-size: 0.75em;
+  width: 95%;
+}
+
+#settingsContent i {
+  float: right;
+  clear: both;
+  color: #796079;
+}
+
+.setting-button {
+  border-bottom: 1px solid #b2b2b2a1;
+  padding: 1em;
+}
+
+#settingsContent label {
+  float: right;
+  clear: both;
+  margin-right: 2em;
+  font-size: 0.9em;
+}
+
+.dropdown > div {
+  padding: 1em 0;
+}
+
+.content {
+  padding: 1em;
+}
+
+@media only screen and (max-width: 425px) { 
+  .settings-mobile {
+    display: block;
+  }
+}
