--- a/modules/settingsPage/settingsLeftNav/settingsNav.css
+++ b/modules/settingsPage/settingsLeftNav/settingsNav.css
@@ -19,16 +19,14 @@
   background-color: #E5E5E5;
 }
 
-.settings-nav > p {
-  padding: 0.2em 1.5em;
-  font-weight: 550;
+.settings-nav > div {
+  padding: 1em 1.5em;
+  font-size: 1.1em;
 }
 
-#previousPageButton {
-  float: right;
-  clear: both;
+.previous-button {
   cursor: pointer;
-  font-size: 1.1em;
+  margin-right: 1em;
 }
 
 .settings-mobile {
