add media query for max width of 375px

--- a/modules/channelPage/channelPage.css
+++ b/modules/channelPage/channelPage.css
@@ -123,3 +123,13 @@
     padding: 0 1em;
   }
 }
+
+@media only screen and (max-width: 375px) {
+  .channel-nav > nav > button {
+    padding: 1em 1em;
+  }
+
+  .channel-nav > nav {
+    text-align: center;
+  }
+}
