--- a/modules/topNav/topNav.css
+++ b/modules/topNav/topNav.css
@@ -109,3 +109,9 @@ button {
     display: none;
   }
 }
+
+@media only screen and (max-width: 375px) {
+  #profilePhoto {
+    margin-left: 1.5em;
+  }
+}
