--- a/modules/defaultLeftNav/defaultLeftNav.css
+++ b/modules/defaultLeftNav/defaultLeftNav.css
@@ -90,12 +90,12 @@
   margin: auto 1em;
 }
 
-#leftSideNav > button.trending i {
+#leftSideNav > .trending i {
   font-size: 1.2em;
   margin: auto 1.2em;
 }
 
-#leftSideNav > button.trending {
+#leftSideNav > .trending {
   padding: 1.2em 0;
 }
 
@@ -119,32 +119,44 @@
     display: none;
   }
 
+  #leftNav {
+    height: auto;
+  }
+
   #leftSideNav {
     display: inline;
-    bottom: 0em;
+    bottom: 0;
     background-color: #fff;
     box-shadow: 0px 0px 2px 0px #00000033; 
     z-index: 1;
     width: 100%;
     height: 4em;
+    text-align: center;
   }
 
   #leftSideNav > button {
     display: inline;
     width: 7em;
-    height: 3em;
-    vertical-align: middle;
-    margin: 0.5em 0.5em;
-    padding: 0 2em;
   }
 
   #leftSideNav > button:nth-child(2) {
-    width: 4em;
-    line-height: 1.5em;
-    padding-top: 0.5em;
+    vertical-align: middle;
+  }
+
+  #leftSideNav > button:nth-child(2) i {
+    margin: 0.2em 0;
+  }
+
+  #leftSideNav > button:hover {
+    background-color: transparent;
+  }
+
+  #leftSideNav > button:focus {
+    color: #ff0000;
   }
 
   #leftSideNav i {
+    display: block;
     margin: 0;
   }
 
