--- a/modules/trendingPage/trendingPage.css
+++ b/modules/trendingPage/trendingPage.css
@@ -92,15 +92,14 @@
   }
 
   .video-info {
-    width: 25em;
-    padding: 0 1em;
+    width: 24em;
+    padding: 0 0 0 1em;
   }
 }
 
 @media only screen and (max-width: 375px) {
   .video-info {
-    width: 22em;
-    padding: 0 1em;
+    width: 21em;
   }
 
   .trending-nav {
